Fix vertical alignment

--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -1,5 +1,5 @@
 .nav {
-  display: flex;
+  display: flex !important;
   align-items: center;
   height: 100vh;
   background: rgb(61,79,93);
